<resources>
    <string name="app_name">Jetpack杂货铺</string>


    <!--登录界面文字-->
    <string name="title_activity_login">登录Jetpack杂货铺</string>
    <string name="prompt_email">输入用户账号（邮箱）</string>
    <string name="prompt_password">输入用户密码</string>
    <string name="action_sign_in">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="remember_password">记住密码</string>


    <!--主界面-->
    <string name="news_title">新闻头条</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="navigation_drawer_open"></string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_setting">配置</string>
    <string name="menu_news">新闻头条</string>
    <string name="menu_book">图书电商</string>
    <string name="menu_category">杂货铺</string>
    <string name="menu_idcard">身份证查询</string>
    <string name="menu_lottery">彩票开奖</string>
    <string name="menu_gold">黄金数据</string>
    <string name="menu_rate">汇率数据</string>
    <string name="menu_ip">IP查询</string>
    <string name="news_toutiao">头条</string>
    <string name="news_shehui">社会</string>
    <string name="news_guonei">国内</string>
    <string name="news_guoji">国际</string>
    <string name="news_yule">娱乐</string>
    <string name="news_tiyu">体育</string>
    <string name="news_junshi">军事</string>
    <string name="news_keji">科技</string>
    <string name="news_caijing">财经</string>
    <string name="news_shishang">时尚</string>
    <string name="title_activity_news_list_navi">NewsListNaviActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
