<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewmodel" type="com.zlcdgroup.jetpacksample.ui.login.LoginViewModel"/>
    </data>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".ui.login.LoginActivity">
        <TextView android:layout_width="match_parent" android:layout_height="60dp"
                  android:textColor="@color/white"
                  android:text="@string/title_activity_login"
                  android:textSize="20dp"
                  android:gravity="center"
                  android:layout_marginBottom="16dp"
                  android:background="@color/colorPrimary"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="@={viewmodel.username}"
                    android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="@={viewmodel.password}"
                    android:singleLine="true" tools:ignore="Autofill"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="6dp"
                      android:orientation="horizontal">
            <CheckBox
                    android:text="@string/remember_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:checked="@={viewmodel.rememberPassword}"
                    android:id="@+id/remember"/>

            <TextView
                    android:text="@string/forget_password"
                    android:layout_width="wrap_content"
                    android:textColor="@color/mediumblue"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:id="@+id/forget"/>
        </LinearLayout>

        <Button
                android:id="@+id/btnLogin"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"/>

        <TextView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:textColor="@color/red"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.errorMssage}"
                android:gravity="center"
                android:id="@+id/errorMessage"/>

    </LinearLayout>

</layout>